--- a/smb215/res/values/strings.xml
+++ b/smb215/res/values/strings.xml
@@ -4,5 +4,11 @@
     <string name="app_name">smb215</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+     <string name="action_add">action_add</string>
+     <string name="pref_header_messaging"> pref_header_messaging</string>
+      <string name="pref_title_server_url"> pref_title_server_url</string>
+     <string name="pref_title_sender_id"> pref_title_sender_id</string>
+      <string name=" server_register_error">  server_register_error</string>
+    
 
 </resources>
