--- a/smb215/res/values/strings.xml
+++ b/smb215/res/values/strings.xml
@@ -5,10 +5,14 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
      <string name="action_add">action_add</string>
-     <string name="pref_header_messaging"> pref_header_messaging</string>
-      <string name="pref_title_server_url"> pref_title_server_url</string>
-     <string name="pref_title_sender_id"> pref_title_sender_id</string>
-      <string name=" server_register_error">  server_register_error</string>
-    
+     <string name="gcm_error"> gcm_error</string>
+      <string name="gcm_deleted"> gcm_deleted</string>
+     <string name="gcm_message"> gcm_message</string>
+      <string name="gcm_unregistered">gcm_unregistered</string> 
+     <string name="gcm_registered">gcm_registered</string>
+   <string name="error_config">error_config</string>
+     <string name="server_unregister_error">server_unregister_error</string>
+      <string name="already_registered">already_registered</string>
+        <string name="gcm_recoverable_error">gcm_recoverable_error</string>
 
 </resources>
