--- a/smb215/res/values/strings.xml
+++ b/smb215/res/values/strings.xml
@@ -14,5 +14,10 @@
      <string name="server_unregister_error">server_unregister_error</string>
       <string name="already_registered">already_registered</string>
         <string name="gcm_recoverable_error">gcm_recoverable_error</string>
+          <string name="server_registering">server_registering</string>
+            <string name="server_registered">server_registered</string>
+              <string name="server_register_error">server_register_error</string>
+                <string name="server_unregistered">server_unregistered</string>
+                  <string name="server_register_error">server_register_error</string>
 
 </resources>
